--- a/style.css
+++ b/style.css
@@ -370,7 +370,9 @@ body {
     .hamburger {
         display: flex;
     }
-
+    #svg1,#svg2{
+        opacity: 0;
+    }
     .right {
         margin: 0;
     }
